--- a/Downloads/startmin-master/pages/index.html
+++ b/Downloads/startmin-master/pages/index.html
@@ -390,7 +390,7 @@
                             <!-- /.panel -->
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <i class="fa fa-bar-chart-o fa-fw"></i> Bar Chart Example
+                                    <i class="fa fa-bar-chart-o fa-fw"></i> Анализ на емоции
                                     <div class="pull-right">
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
